improve banner with text with locale

--- a/templates/front/portada.html.twig
+++ b/templates/front/portada.html.twig
@@ -116,7 +116,7 @@
         $(function () {
 
             {# Habilito el carousel #}
-            $('.carousel').carousel();
+            {# $('.carousel').carousel(); #}
 
             actualizarIdiomaDataTables();
 
